added posibility to save trainded module

--- a/image_collection.ipynb
+++ b/image_collection.ipynb
@@ -249,9 +249,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: CPU random generator seem to be failing, disabling hardware random number generation\n",
+      "WARNING: RDRND generated: 0xffffffff 0xffffffff 0xffffffff 0xffffffff\n"
+     ]
+    }
+   ],
    "source": [
     "!cd  {LABEL_PATH} && python labelImg.py"
    ]
